--- a/ToDo
+++ b/ToDo
@@ -1,14 +1,6 @@
 Date: 09-10-2019
 
-TODO:
+# TODO:
 - Design Post CRUD Pages
 - Make Post CRUD
 - 
-
-
-# Design Admin Panel
-# Design Home page
-# Make Admin Registaion & Database table
-# Make Admin Login
-# Create Database for category and make category crud
-# Create Database for post and make post crud
